<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cred"
        android:icon="@drawable/ic_creds"
        android:title="@string/title_cred" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />

</menu>