<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="@dimen/brand_width"
        android:layout_height="@dimen/brand_height"
        android:layout_marginTop="@dimen/margin_30"
        android:src="@mipmap/icon_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/tv_login_main_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/login_text_main"
        android:textColor="@color/white_light"
        android:layout_marginTop="@dimen/margin_30"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_icon"
        />

    <TextView
        android:id="@+id/tv_login_sub_title"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:text="@string/login_text_sub"
        android:textColor="@color/theme_red"
        android:layout_marginTop="@dimen/margin_30"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_login_input"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_48dp"
        android:layout_marginHorizontal="@dimen/margin_new_base"
        android:layout_marginTop="@dimen/margin_new_base"
        android:inputType="text"
        android:paddingHorizontal="@dimen/margin_new_small"
        android:textAlignment="center"
        android:background="@color/black_f5c"
        android:textCursorDrawable="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_sub_title"
        tools:text="123456" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_go"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login_go"
        android:textColor="@color/white_light"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/background_button_corner_32dp"
        android:layout_marginHorizontal="@dimen/margin_30"
        app:layout_constraintTop_toBottomOf="@+id/et_login_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/corner_6dp"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_marginHorizontal="@dimen/margin_20"
        app:layout_constraintBottom_toTopOf="@+id/card_shop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_join_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_enter_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_enter_title"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_enter_sub"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/tv_enter_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_enter_title"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                app:layout_constraintTop_toBottomOf="@+id/tv_enter_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:id="@+id/iv_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_enter"
                android:layout_marginRight="@dimen/margin_20"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_shop"
        android:layout_width="0dp"
        app:cardBackgroundColor="@color/black_936"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_height="@dimen/button_height_64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_help"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_shop"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_login_shop"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_shop"/>
            <TextView
                android:id="@+id/tv_shop"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white_light"
                android:text="@string/login_text_shop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_shop"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_help"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_height="@dimen/button_height_64dp"
        app:cardBackgroundColor="@color/black_936"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/card_shop"
        app:layout_constraintRight_toLeftOf="@+id/card_follow">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_help"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_login_help"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_help"/>
            <TextView
                android:id="@+id/tv_help"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white_light"
                android:text="@string/login_text_help"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_help"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_follow"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_height="@dimen/button_height_64dp"
        app:cardBackgroundColor="@color/black_936"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/card_help"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_follow"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_login_follow"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_follow"/>
            <TextView
                android:id="@+id/tv_follow"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white_light"
                android:text="@string/login_text_follow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_follow"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>